--- a/_frontend/blocks/background-page/style.scss
+++ b/_frontend/blocks/background-page/style.scss
@@ -25,6 +25,18 @@
                 display: none;
             }
         }
+        &_exclusive {
+            position: absolute;
+            z-index: -1;
+            left: 0;
+            top: 250px;
+            width: 260px;
+            height: 388px;
+            background: url('../images/background/tomat_exclusive.png') no-repeat;
+            @media only screen and (max-width: 1680px) {
+                display: none;
+            }
+        }
     }
     &__butter {
         &_about {
@@ -137,6 +149,17 @@
             background-color: #f6d34b;
             opacity: .2;
         }
+        &_exclusive {
+            position: absolute;
+            z-index: -1;
+            left: 0px;
+            top: 335px;
+            width: 34%;
+            height: 105px;
+            transform: skewY(20deg);
+            background-color: #f6d34b;
+            opacity: .2;
+        }
     }
     &__block-left-middle-top {
         &_about {
@@ -192,6 +215,17 @@
             bottom: 486px;
             width: 270px;
             height: 170px;
+            transform: skewY(20deg);
+            background-color: #f6d34b;
+            opacity: .2;
+        }
+        &_exclusive {
+            position: absolute;
+            z-index: -1;
+            left: 0px;
+            bottom: 600px;
+            width: 270px;
+            height: 180px;
             transform: skewY(20deg);
             background-color: #f6d34b;
             opacity: .2;
@@ -291,6 +325,17 @@
                 background-color: #f6d34b;
                 opacity: .2;
             }
+            &_exclusive {
+                position: absolute;
+                z-index: -2;
+                right: 0px;
+                top: 300px;
+                width: 310px;
+                height: 285px;
+                transform: skewY(20deg);
+                background-color: #f6d34b;
+                opacity: .2;
+            }
         }
         &-middle {
             &_about {
@@ -366,6 +411,20 @@
             width: 309px;
             height: 400px;
             background: url('../images/background/butter-right_event.png') no-repeat;
+            @media only screen and (max-width: 1660px) {
+                display: none;
+            }
+        }
+    }
+    &__milk-right {
+        &_exclusive {
+            position: absolute;
+            z-index: -2;
+            right: 0;
+            bottom: 810px;
+            width: 318px;
+            height: 566px;
+            background: url('../images/background/milk-right_exclusive.png') no-repeat;
             @media only screen and (max-width: 1660px) {
                 display: none;
             }
