--- a/_frontend/blocks/product-pagination/style.scss
+++ b/_frontend/blocks/product-pagination/style.scss
@@ -5,6 +5,9 @@
         &-20-65 {
             padding: 20px 0 65px;
         }
+        &-40-60 {
+            padding: 40px 0 60px;
+        }
     }
     &_pb-10 {
         padding-bottom: 10px;
