--- a/_frontend/blocks/product-use-carousel/style.scss
+++ b/_frontend/blocks/product-use-carousel/style.scss
@@ -4,6 +4,9 @@
     &_margin-bottom {
         margin-bottom: 90px;
     }
+    &_m-0-60 {
+        margin: 0 auto 60px;
+    }
     &__wrap {
         float: left;
         width: 25%;
