--- a/_frontend/blocks/style.scss
+++ b/_frontend/blocks/style.scss
@@ -42,4 +42,5 @@
 @import "production-spinner_about/style";
 @import "direct-action/style";
 @import "events/style";
-@import "events/style";
+@import "event-inn/style";
+@import "event-inn/style";
