--- a/_frontend/blocks/text-about-company/style.scss
+++ b/_frontend/blocks/text-about-company/style.scss
@@ -11,5 +11,11 @@
         li:before {
             content: "- ";
         }
+        &_event {
+            padding-top: 0;
+            li {
+                margin: 10px auto;
+            }
+        }
     }
 }
