--- a/_frontend/blocks/recommendation/style.scss
+++ b/_frontend/blocks/recommendation/style.scss
@@ -44,7 +44,7 @@
         width: 100%;
         height: 210px;
         color: #ffffff;
-        background-color: #fdd439;
+        background-color: #f6cc49;
         border-radius: 10px;
         float: left;
         background-position: center;
